--- a/docs/MySQL/MySQL 是怎样使用的-从零蛋开始学习 MySQL/00.md
+++ b/docs/MySQL/MySQL 是怎样使用的-从零蛋开始学习 MySQL/00.md
@@ -1,23 +1,17 @@
-# 如何愉快的阅读本小册
-
-
-
-***注：本章很重要，一定要看完，费不了几分钟的。\***
-
-### 购买前警告⚠️
+# 购买并阅读本小册的建议
 
 - 此小册是彻彻底底的MySQL数据库入门书籍，如果你抱着了解关于MySQL的一些高级的用法，诸如索引、查询优化、事务和锁之类的东东，那你来错地方了，应该去看另一本小册：[《MySQL是怎样运行的：从根儿上理解MySQL》的链接](https://juejin.im/book/6844733769996304392?referrer=5bff96c6e51d45452f2d6f95)
 - 此小册非正经科学专著，亦非十二五国家级规划教材，也没有大段代码和详细论证，作者喜欢扯犊子，喜欢正经论述的同学请避免购买本小册。
 - 此小册作者乃一无业游民，非专业大佬，没有任何职称，只是单单喜欢把复杂问题讲清楚的那种快感，所以喜欢作者有 Google、Facebook 高级开发工程师二百年工作经验Title 的同学请谨慎购买。
 - 学习完本小册并不会成为大神，只能说从准菜鸟进入了菜鸟行列，所以不要抱着读完本小册一下子晋升业界大佬，当上 CTO，迎娶白富美，走上人生巅峰的想法，白日做梦，不可能滴～ 希望本小册能够帮助大家解决一些工作、面试过程中的问题，逐渐成为一个更好的工程师，当然，可以在日后升级打怪最后成为大神的路上打下一个比较好的基础。
 
-### 购买并阅读本小册的建议
-
-![img](https://p1-jj.byteimg.com/tos-cn-i-t2oaga2asx/gold-user-assets/2019/2/22/169142638c71b5dc~tplv-t2oaga2asx-jj-mark:2268:0:0:0:q75.awebp)
+![img](https://p1-jj.byteimg.com/tos-cn-i-t2oaga2asx/gold-user-assets/2019/2/22/169142638c71b5dc~tplv-t2oaga2asx-jj-mark:2835:0:0:0:q75.awebp)
 
 - 本小册是一本待出版的纸质书籍，并非一些杂碎文章的集合，是非常有结构和套路的，所以大家阅读时千万不能当作厕所蹲坑、吃饭看手机时的所谓`碎片化读物`。碎片化阅读只适合听听矮大紧、罗胖子他们扯扯犊子，开阔一下视野用的。对于专业的技术知识来说，大家必须付出一个完整的时间段进行体系化学习，这样尊重知识，工资才能尊重你。
-- 本小册是由 Markdown 写成，在电脑端阅读体验十分舒服，当然你非要用小手机看我也不拦着你，但是效果打了折扣是你的损失。
-- 为了保证最好的阅读体验，不用一个没学过的概念去介绍另一个新概念，本小册的章节有严重的依赖性，所以建议大家从前看到尾，不要跳着看！不要跳着看！不要跳着看！，当然，不听劝告我也不能说啥，祝你好运。
+- 本小册是由 Markdown 写成，在`电脑端阅读体验十分舒服`，当然你非要用小手机看我也不拦着你，但是效果打了折扣是你的损失。
+- 为了保证最好的阅读体验，不用一个没学过的概念去介绍另一个新概念，本小册的章节有严重的依赖性，所以建议大家从前看到尾，`不要跳着看！不要跳着看！不要跳着看！`，当然，不听劝告我也不能说啥，祝你好运。
+
+
 
 ### 关于错误
 
@@ -37,28 +31,30 @@
 
 虽然我觉得文章写的已经很清晰了，但毕竟只是“我觉得”，不是大家觉得。传道授业解惑，解惑很重要。在学习一门知识时，我们最容易让一些问题绊住脚步，大家在阅读小册时如果发现了任何你觉得让你很困惑的问题，都可以到我们的微信群里提问。再次特意声明一点：微信群是用来解答小册疑问以及讨论专业问题的，不要在群里扯淡！不要在群里扯淡！不要在群里扯淡！（啥叫扯淡？家长里短，行业趋势啥的统统叫扯淡）。
 
-```!
-!复制代码小贴士：
+```
+小贴士：
 
 《MySQL是怎样使用的：从零蛋开始学习MySQL》和《MySQL是怎样运行的：从根儿上理解MySQL》是两本不同的小册，如果同一个同学同时购买了两本小册的话，请加入不同的微信群提问。因为两者的受众不同，提的问题也不同，如果交叉提问的话，会让群里的同学产生反感，影响体验，谢谢各位配合。
+
 ```
 
 入群方式：大家可以通过添加我的微信或者小册姐的微信入群（微信号：xiaohaizi4919，或者微信扫描下边的二维码）。
 
-![微信二维码](https://p1-jj.byteimg.com/tos-cn-i-t2oaga2asx/gold-user-assets/2019/7/14/16bee4480039a721~tplv-t2oaga2asx-jj-mark:2268:0:0:0:q75.awebp)
+![img](https://p1-jj.byteimg.com/tos-cn-i-t2oaga2asx/gold-user-assets/2019/7/14/16bee4480039a721~tplv-t2oaga2asx-jj-mark:2835:0:0:0:q75.awebp)
 
 我在力所能及的范围内尽力帮大家解答。
 
-```!
-!复制代码小贴士：
+```
+小贴士：
 
 小册之内的问题我会尽量回复，之外的问题可以丢给大家讨论。
+
 ```
 
 ## 关于小孩子的微信公众号
 
 小孩子运营了自己的公众号【我们都是小青蛙】，会时常发布一些小册补充文章或者别的一些技术文章，偶尔会扯扯犊子，欢迎大家关注一波：
 
-![img](https://p1-jj.byteimg.com/tos-cn-i-t2oaga2asx/gold-user-assets/2019/4/18/16a2e7131c8643e4~tplv-t2oaga2asx-jj-mark:2268:0:0:0:q75.awebp)
+![img](https://p1-jj.byteimg.com/tos-cn-i-t2oaga2asx/gold-user-assets/2019/4/18/16a2e7131c8643e4~tplv-t2oaga2asx-jj-mark:2835:0:0:0:q75.awebp)
 
-希望各位可以成为更好的工程师，多多为祖国做贡献～
+希望各位可以成为更好的工程师
